--- a/css/cruzeiro.css
+++ b/css/cruzeiro.css
@@ -481,6 +481,10 @@ video{
 #destaque-produtos .col-imagem{
     text-align: center;
 }
+#destaque-produtos .col-imagem img{
+    max-width: 100%;
+    max-height: 250px;
+}
 #destaque-produtos .col-descricao h2{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
